# coinlocker

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.yml  README.md  compose.yaml  docker-compose.yml  lockin.rs
archive/: lockinTest.rs
frontend/: .env.example  README.md  main.py  requirements.txt
scripts/: clean_build.sh  debug.sh  docker-compose-build.sh  install-docker.sh
src/: error_handling.rs  kraken.rs  lockin.rs  main.rs  mongo.rs  poller.rs  server.rs
src/handlers/: decrypt.rs  mod.rs  register.rs
src/utils/: get_address_from_txid.rs  mod.rs
src/wallets/: bitcoin.rs  ethereum.rs  mod.rs  solana.rs
