[package]
name = "coinlockerapi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
dotenv = "0.15"
axum = { version = "0.6", features = ["headers"]}
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
mongodb = { version = "2.1", features = ["tokio-runtime"] }
uuid = { version = "1.0", features = ["v4"] }
kraken_rest_client = "0.25.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bdk = { version = "0.28.1", features = ["all-keys"] }
solana-sdk = "1.7"
web3 = "0.17.0"
secp256k1 = { version = "0.20.3", features = ["rand"] }
tiny-keccak = { version = "1.4" }
chrono = "0.4.38"
aes = "0.8.4"
hex = "0.4.3"
rand = "0.8.5"
aes-gcm = "0.10.3"
typenum = "1.17.0"
reqwest = "0.11.10"  # Use a compatible version of reqwest for jupiter
jupiter-swap-api-client = "0.1.0"
base64 = "0.22.1"
bs58 = "0.5.1"
bincode = "1.3.3"
log = "0.4.22"
env_logger = "0.11.3"
solana-client = "1.18.0"
solana-program = "1.18.0"
spl-associated-token-account = "1.1.0"
spl-token = "3.4.0"